Fixed widget-petri on mobile

--- a/assets/stylus/widgets/widget-petri.styl
+++ b/assets/stylus/widgets/widget-petri.styl
@@ -93,8 +93,8 @@
                 position relative
 
             .petri-legenda-circle-inhibition
-                width 1rem
-                height 1rem
+                width .6rem
+                height .6rem
                 background brand-grey1
                 flex-shrink: 0 !important
 
@@ -103,8 +103,8 @@
                     height 2rem
 
             .petri-legenda-circle-antibiotics
-                width 1rem
-                height 1rem
+                width .6rem
+                height .6rem
                 background brand-pink
                 flex-shrink: 0 !important
 
@@ -242,8 +242,8 @@
 
     // SVG container with fixed dimensions
     .circle-svg
-        width: 45%
-        height: 45%
+        width: 35%
+        height: 35%
         margin: 0
         padding: 0
 
